--- a/wk1exercise1.html
+++ b/wk1exercise1.html
@@ -11,7 +11,8 @@
     <select>
         <option value='Monday'>Monday</option>
         <option value='Tuesday'>Tuesday</option>
-        <option value='Sunday'>Sunday</option>
-    </select>
+        <option value='Sunday' selected>Sunday</option>
+    </select>   
 </body>
-</html>
+</html> 
+ 
